package CashierView;

public class CashierViewController {
}
