@startuml

title __LBYCPD2 PROJECT's Class Diagram__\n

  namespace AdminView {
    namespace AdminTools {
      class AdminView.AdminTools.AdminTools {
      }
    }
  }
  

  namespace AdminView {
    namespace AdminTools {
      class AdminView.AdminTools.AdminToolsController {
      }
    }
  }
  

  namespace AdminView {
    class AdminView.AdminView {
    }
  }
  

  namespace AdminView {
    class AdminView.AdminViewController {
    }
  }
  

  namespace AdminView {
    namespace Inventory {
      class AdminView.Inventory.Inventory {
      }
    }
  }
  

  namespace AdminView {
    namespace Inventory {
      class AdminView.Inventory.InventoryController {
      }
    }
  }
  

  namespace AdminView {
    namespace Products {
      class AdminView.Products.Product {
      }
    }
  }
  

  namespace AdminView {
    namespace Products {
      class AdminView.Products.ProductController {
      }
    }
  }
  

  namespace CashierView {
    namespace CartView {
      class CashierView.CartView.CartView {
      }
    }
  }
  

  namespace CashierView {
    namespace CartView {
      class CashierView.CartView.CartViewController {
      }
    }
  }
  

  namespace CashierView {
    class CashierView.CashierView {
    }
  }
  

  namespace CashierView {
    class CashierView.CashierViewController {
    }
  }
  

  namespace CashierView {
    namespace OrderView {
      class CashierView.OrderView.OrderView {
      }
    }
  }
  

  namespace CashierView {
    namespace OrderView {
      class CashierView.OrderView.OrderViewController {
      }
    }
  }
  

  namespace CashierView {
    class CashierView.Receipt {
    }
  }
  

  namespace CustomerVIew {
    namespace CartView {
      class CustomerVIew.CartView.CartView {
      }
    }
  }
  

  namespace CustomerVIew {
    namespace CartView {
      class CustomerVIew.CartView.CartViewController {
      }
    }
  }
  

  namespace CustomerVIew {
    class CustomerVIew.Customer {
    }
  }
  

  namespace CustomerVIew {
    class CustomerVIew.CustomerController {
    }
  }
  

  namespace CustomerVIew {
    namespace OrderView {
      class CustomerVIew.OrderView.OrderView {
      }
    }
  }
  

  namespace CustomerVIew {
    namespace OrderView {
      class CustomerVIew.OrderView.OrderViewController {
      }
    }
  }
  

  namespace MainMenuFX {
    namespace LoginFX {
      class MainMenuFX.LoginFX.Login {
      }
    }
  }
  

  namespace MainMenuFX {
    namespace LoginFX {
      class MainMenuFX.LoginFX.LoginController {
      }
    }
  }
  

  namespace MainMenuFX {
    class MainMenuFX.MMController {
    }
  }
  

  namespace MainMenuFX {
    class MainMenuFX.Main {
    }
  }
  

  AdminView.AdminTools.AdminTools -up-|> javafx.application.Application
  AdminView.AdminView -up-|> javafx.application.Application
  AdminView.Inventory.Inventory -up-|> javafx.application.Application
  AdminView.Products.Product -up-|> javafx.application.Application
  CashierView.CartView.CartView -up-|> javafx.application.Application
  CashierView.CashierView -up-|> javafx.application.Application
  CashierView.OrderView.OrderView -up-|> javafx.application.Application
  CustomerVIew.CartView.CartView -up-|> javafx.application.Application
  CustomerVIew.Customer -up-|> javafx.application.Application
  CustomerVIew.OrderView.OrderView -up-|> javafx.application.Application
  MainMenuFX.LoginFX.Login -up-|> javafx.application.Application
  MainMenuFX.Main -up-|> javafx.application.Application


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
